<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewmodel"
      type="com.logic.jellyfish.ui.login.forget.ForgetViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.login.login.LoginActivity">

    <ImageView
      android:layout_width="@dimen/login_ic"
      android:layout_height="@dimen/login_ic"
      android:layout_marginTop="@dimen/logo_margin_top"
      android:contentDescription="@null"
      app:srcCompat="@mipmap/logo" />

    <EditText
      style="@style/LoginEditText"
      android:hint="@string/hint_phone_number"
      android:inputType="number"
      android:text="@={viewmodel.phoneNumber}" />

    <EditText
      style="@style/LoginEditText"
      android:hint="@string/hint_verification_code"
      android:inputType="number"
      android:text="@={viewmodel.verificationCode}" />

    <EditText
      style="@style/LoginEditText"
      android:hint="@string/hint_input_password"
      android:inputType="textPassword"
      android:text="@={viewmodel.password}" />

    <Button
      style="@style/ConfirmButton"
      android:onClick="@{(v) -> viewmodel.confirm(v)}"
      android:text="@string/confirm" />


  </LinearLayout>

</layout>