<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewmodel"
      type="com.logic.jellyfish.ui.login.login.LoginViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.login.login.LoginActivity">

    <ImageView
      android:layout_width="@dimen/login_ic"
      android:layout_height="@dimen/login_ic"
      android:layout_marginTop="@dimen/logo_margin_top"
      android:contentDescription="@null"
      app:srcCompat="@mipmap/logo" />

    <EditText
      style="@style/LoginEditText"
      android:hint="@string/hint_phone_number" />

    <EditText
      style="@style/LoginEditText"
      android:hint="@string/hint_input_password" />

    <Button
      style="@style/ConfirmButton"
      android:onClick="@{(v) -> viewmodel.login(v)}"
      android:text="登陆" />

    <RelativeLayout
      android:layout_width="240dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:onClick="@{(v) -> viewmodel.newUser(v)}"
        android:text="注册新用户"
        android:textColor="@color/grey_200"
        android:textSize="16sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:onClick="@{(v) -> viewmodel.forgetPassword(v)}"
        android:text="忘记密码"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />


    </RelativeLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:text="@string/other_login_way"
      android:textColor="@color/grey_200"
      android:textSize="14sp" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:orientation="horizontal">

      <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@null"
        android:padding="15dp"
        app:srcCompat="@mipmap/qq" />

      <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@null"
        android:padding="15dp"
        app:srcCompat="@mipmap/wechat" />

      <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@null"
        android:padding="15dp"
        app:srcCompat="@mipmap/weibo" />
    </LinearLayout>
  </LinearLayout>
</layout>