<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.timer.TimerActivity">

    <data>

        <variable
            name="viewmodel"
            type="com.logic.jellyfish.ui.timer.TimerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/DimGray">

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            app:layout_constraintBottom_toBottomOf="@+id/time_use"
            app:layout_constraintEnd_toStartOf="@+id/time_use"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/speed_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.speedNumber}"
            app:layout_constraintBottom_toBottomOf="@+id/time_cost_number"
            app:layout_constraintEnd_toEndOf="@+id/speed"
            app:layout_constraintStart_toStartOf="@+id/speed"
            tools:text="0`00``" />

        <TextView
            android:id="@+id/time_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_cost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/consume"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/time_cost_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@{viewmodel.timeCostNumber}"
            app:layout_constraintBottom_toTopOf="@+id/time_use"
            app:layout_constraintEnd_toEndOf="@+id/time_use"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/time_use"
            tools:text="00:10:25" />

        <TextView
            android:id="@+id/consume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consume"
            app:layout_constraintBottom_toBottomOf="@+id/time_use"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/time_use" />

        <TextView
            android:id="@+id/calories_consume_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.caloriesConsumeNumberNumber}"
            app:layout_constraintBottom_toBottomOf="@+id/time_cost_number"
            app:layout_constraintEnd_toEndOf="@+id/consume"
            app:layout_constraintStart_toStartOf="@+id/consume"
            tools:text="7" />

        <TextView
            android:id="@+id/kilo_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@{viewmodel.kiloMeterNumber}"
            app:layout_constraintBottom_toTopOf="@+id/kilometer"
            app:layout_constraintEnd_toEndOf="@+id/kilometer"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/kilometer"
            tools:text="0.01" />

        <TextView
            android:id="@+id/kilometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.weather}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            tools:text="25℃" />

        <FrameLayout
            android:id="@+id/resume_button_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="92dp"
            android:background="@drawable/timber_button_resume_circle"
            android:onClick="@{(v) -> viewmodel.resume(v)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/stop_button_container"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/open_map">

            <TextView
                android:id="@+id/resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resume" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/stop_button_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/timber_button_stop_circle"
            android:onClick="@{(v) -> viewmodel.stop(v)}"
            app:layout_constraintBottom_toBottomOf="@+id/resume_button_container"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/lock"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/resume_button_container">

            <TextView
                android:id="@+id/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stop" />
        </FrameLayout>

        <ImageView
            android:id="@+id/lock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="@{() -> viewmodel.lock()}"
            android:src="@mipmap/ic_lock"
            app:layout_constraintBottom_toBottomOf="@+id/stop_button_container"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/stop_button_container"
            app:layout_constraintTop_toTopOf="@+id/stop_button_container" />

        <ImageView
            android:id="@+id/open_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:onClick="@{(v) -> viewmodel.openMap(v)}"
            android:src="@mipmap/ic_mini_map"
            app:layout_constraintBottom_toBottomOf="@+id/resume_button_container"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/resume_button_container"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/resume_button_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>