<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewmodel"
      type="com.logic.jellyfish.ui.mine.MineViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/imageView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:srcCompat="@mipmap/activity_icon" />

    <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="疯狂的石头"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:singleLine="true"
        android:text="深圳" />

      <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="LV3" />

    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="10dp"
      android:layout_marginTop="20dp"
      android:background="@color/grey_300" />


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{(v) -> viewmodel.navigateToRecord(v)}"
      android:orientation="horizontal">

      <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@mipmap/mine_icon"
        android:tint="@color/deep_purple_500" />

      <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/my_sport" />

      <ImageButton
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_right"
        android:tint="@color/deep_purple_500" />

    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/grey_300" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{(v) -> viewmodel.navigateToEvent(v)}"
      android:orientation="horizontal">

      <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@mipmap/mine_icon"
        android:tint="@color/deep_purple_500" />

      <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/my_event" />

      <ImageButton
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_right"
        android:tint="@color/deep_purple_500" />

    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/grey_300" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{(v) -> viewmodel.navigateToFollowing(v)}"
      android:orientation="horizontal">

      <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@mipmap/mine_icon"
        android:tint="@color/deep_purple_500" />

      <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/my_following" />

      <ImageButton
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_right"
        android:tint="@color/deep_purple_500" />

    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/grey_300" />

    <LinearLayout
      android:layout_width="match_parent"
      android:onClick="@{(v) -> viewmodel.navigateToMyMessage(v)}"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@mipmap/mine_icon"
        android:tint="@color/deep_purple_500" />

      <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/my_message" />

      <ImageButton
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_right"
        android:tint="@color/deep_purple_500" />

    </LinearLayout>


    <View
      android:layout_width="match_parent"
      android:layout_height="10dp"
      android:background="@color/grey_300" />


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{(v) -> viewmodel.navigateToSettings(v)}"
      android:orientation="horizontal">

      <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@mipmap/mine_icon"
        android:tint="@color/deep_purple_500" />

      <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/setting" />

      <ImageButton
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_right"
        android:tint="@color/deep_purple_500" />

    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/grey_300" />

  </LinearLayout>

</layout>